[gd_scene load_steps=3 format=3 uid="uid://b56nd67lu0bsb"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_6cdyk"]
[ext_resource type="FontFile" uid="uid://d5mt76lp83ts" path="res://assets/monogram.ttf" id="2_4br70"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_6cdyk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.678431)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -76.0
offset_right = 40.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Paused" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4br70")
text = "PAUSED"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 6

[node name="Continue" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4br70")
text = "continue"

[node name="LevelSelect" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4br70")
text = "level select"

[node name="QuitGame" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4br70")
text = "quit game"

[connection signal="pressed" from="Control/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
